--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td> <img src="C:\Users\hp\Desktop\web\HTML-Personal site\402.png" alt="Doremon Profile picture">
+            <td> <img src="images/402.png" alt="Doremon Profile picture">
                 <!--<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQOOc5Gcmm_4n3u86dq1NLCSL7BcmAdIr1rjNMumehds4xxtsm78GQKaJ1YaPAq-MWfZYc&usqp=CAU" alt="Profile picture"> --></td>
              <td>
                 <h1>AYUSH MISHRA</h1>
